test/tests/compiler/9_functions/invalid_labels/extra_credit/goto_function.plx
pub fn foo(none) i32 {
    return 3
}

pub fn main(none) i32 {
    #  You can't use a function name as a goto label 
    jump foo
    return 3
}
